Add JVM config for test runs
- Open package access for integration tests
- Add note about same content in jvm.config